# Par_from_render

./: .~lock.output1.ppm#  CMakeLists.txt
.devcontainer/: Dockerfile
aos/src/: framebuffer_aos.hpp  main.cpp
common/: CMakeLists.txt
common/include/: camera.hpp  cli.hpp  color.hpp  config.hpp  ppm_writer.hpp  rayos.hpp  scene.hpp
common/src/: camera.cpp  cli.cpp  config.cpp  ppm_writer.cpp  rayos.cpp  scene.cpp
parameters/: CMakeLists.txt  config.txt
parameters/src/: CommonTypes.cpp  CommonTypes.hpp  ConfigError.hpp  ConfigLoader.cpp  ConfigLoader.hpp  ConfigParams.hpp  main.cpp
soa/: CMakeLists.txt
soa/src/: framebuffer_soa.hpp  main.cpp
utcommon/: CMakeLists.txt  test_camera.cpp  test_color.cpp  test_config.cpp  test_fb_aos.cpp  test_fb_soa.cpp  test_ppm_writer.cpp  test_rayos.cpp  test_scene.cpp
utsoa/: CMakeLists.txt
